OIDplus Win 3.11 Update
git-svn-id: https://svn.viathinksoft.com/svn/oidplus/trunk_win311@234 02e4d621-2042-4998-a0bc-9ccd24201011

--- a/Db/OID.ini
+++ b/Db/OID.ini
@@ -1,6 +1,3 @@
-; 16384
-; 8192
-
 [OID:]
 delegates=3
 delegate1=OID:0
@@ -8,7 +5,7 @@ delegate2=OID:1
 delegate3=OID:2
 
 [OID:0]
-createdate=05.04.2020
+createdate=04.04.2020
 ra=
 description=International Telecommunication Union - Telecommunication standardization sector (ITU-T)
 draft=0
@@ -36,8 +33,7 @@ draft=0
 information=AAWFHRIE.TXT
 asn1id=example
 updatedate=04.04.2020
-delegates=1
-delegate1=
+delegates=0
 
 [OID:1]
 description=International Organization for Standardization (ISO)
@@ -109,12 +105,11 @@ ra=RA:VIATHINKSOFT
 description=Members
 asn1id=members
 updatedate=04.04.2020
-delegates=5
+delegates=4
 delegate1=OID:1.3.6.1.4.1.37476.1.1
 delegate2=OID:1.3.6.1.4.1.37476.1.2
 delegate3=OID:1.3.6.1.4.1.37476.1.3
 delegate4=OID:1.3.6.1.4.1.37476.1.4
-delegate5=OID:1.3.6.1.4.1.37476.1.5
 
 [OID:1.3.6.1.4.1.37476.1.1]
 createdate=04.04.2020
@@ -132,11 +127,11 @@ updatedate=04.04.2020
 
 [OID:1.3.6.1.4.1.37476.1.3]
 createdate=04.04.2020
-ra=
+ra=RA:VTS-DUEPJOHANN
 delegates=0
 description=Michael Düpjohann
 asn1id=mduepjohann
-updatedate=4.5.2020
+updatedate=04.04.2020
 
 [OID:1.3.6.1.4.1.37476.1.4]
 createdate=04.04.2020
@@ -144,11 +139,4 @@ ra=RA:VTS-BRETZKE
 description=Thomas Bretzke
 asn1id=thommy,tbretzke
 updatedate=04.04.2020
-
-[OID:1.3.6.1.4.1.37476.1.5]
-createdate=05.04.2020
-ra=RA:VIATHINKSOFT
-description=test
-updatedate=05.04.2020
-asn1id=test
 
