--- a/Db/RA.ini
+++ b/Db/RA.ini
@@ -1,26 +1,10 @@
 [RA:]
-count=13
-ra1=
-ra2=
-ra3=
-ra4=
-ra5=RA:VIATHINKSOFT
-ra6=RA:VTS-MARSCHALL
-ra7=RA:VTS-NEGOESCU
-ra8=
-ra9=
-ra10=RA:VTS-BRETZKE
-ra11=
-ra12=
-ra13=
-
-[RA:OLIVIER]
-name=Olivier
-updatedate=04.04.2020
-
-[RA:MARSCHALL]
-name=Daniel Marschall
-updatedate=04.04.2020
+count=5
+ra1=RA:VIATHINKSOFT
+ra2=RA:VTS-MARSCHALL
+ra3=RA:VTS-NEGOESCU
+ra4=RA:VTS-DUEPJOHANN
+ra5=RA:VTS-BRETZKE
 
 [RA:VIATHINKSOFT]
 createdate=04.04.2020
@@ -37,12 +21,12 @@ createdate=04.04.2020
 name=Victor-Philipp Negoescu
 updatedate=04.04.2020
 
+[RA:VTS-DUEPJOHANN]
+createdate=04.04.2020
+name=Michael Düpjohann
+updatedate=04.04.2020
+
 [RA:VTS-BRETZKE]
 createdate=04.04.2020
 name=Thomas Bretzke
 updatedate=04.04.2020
-
-[RA:VTS-THOMMY]
-name=Thomas Bretzke
-updatedate=04.04.2020
-
